# plankton-particle-tracking

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: StationPositions.csv  StationPositionsMidshelf.csv
scripts/: __init__.py  make_animation.py  overwrite_cli.py  plankton_tracking.py  run_plankton_tracking.py  utils.py  zarr_to_netcdf.py
scripts/parcels/: __init__.py
