[project]
name = "analysis"
version = "0.1.0"
readme = "README.md"
requires-python = ">3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "xarray[accel,etc,io,parallel]>=2025.1.2",
]
authors = [
    {name = "Andrew Scherer", email = "andrew@sourcedepth.com"}
]
license = "MIT"

[tool.ruff]
extend-exclude = ['./scripts/parcels/']

[tool.ruff.lint.isort]
known-local-folder = ["parcels", "utils"]
