[project]
name = "analysis"
version = "0.1.0"
readme = "README.md"
requires-python = ">3.11"
dependencies = [
    "cartopy>=0.24.1",
    "cmocean>=4.0.3",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "parcels>=3.1.2",
    "xarray[accel,etc,io,parallel]>=2025.1.2",
    "zarr<3",
]
authors = [{ name = "Andrew Scherer", email = "andrew@sourcedepth.com" }]
license = "MIT"

[tool.ruff]
extend-exclude = ['./scripts/parcels/']
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",   # print statements in code
    "RET504", # unnecessary assignment for return
    "D203",   # incorrect blank line before class
    "D213",   # multi-line summary second line
    "CPY001", # missing copyright notice
]

[tool.ruff.lint.isort]
known-local-folder = ["parcels", "utils", "overwrite_cli", "plankton_tracking"]
